reduce drawing width of ACB as it take up too much space on screen, but text remains

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -283,8 +283,8 @@
       <div><b>Incoming Breaker</b><!--<span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span>--></div>
       <div id='select-quantity' class='sidebar-group-content'>
         <div class='selection-wrapper'>
-          <label for="Incoming 1"> 1) </label>
-          <select class="select-position" id="Incoming 1">
+          <label for="Incoming 1">Supply 1 </label>
+          <select class="Supply1-position" id="Incoming 1">
             <option value ='0'>0</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
@@ -295,8 +295,8 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="Incoming 2"> 2) </label>
-          <select class="select-position" id="Incoming 2">
+          <label for="Incoming 2">Supply 2 </label>
+          <select class="Supply2-position" id="Incoming 2">
             <option value ='0'>0</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
