Added incoming breakers

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -284,10 +284,12 @@
       <div id='select-quantity' class='sidebar-group-content'>
         <div class='selection-wrapper'>
           <label for="Incoming 1">Supply 1 </label>
-          <select class="Supply1-position" id="Incoming 1">
-            <option value ='0'>0</option>
+          <select class="incoming-position" id="Incoming 1">
+            <option value ='0'>None</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
+            <option>2000 ACB</option>
+            <option>2500 ACB</option>
             <option>3200 ACB</option>
             <option>4000 ACB</option>
             <option>5000 ACB</option>
@@ -296,10 +298,12 @@
         </div>
         <div class='selection-wrapper'>
           <label for="Incoming 2">Supply 2 </label>
-          <select class="Supply2-position" id="Incoming 2">
-            <option value ='0'>0</option>
+          <select class="incoming-position" id="Incoming 2">
+            <option value ='0'>None</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
+            <option>2000 ACB</option>
+            <option>2500 ACB</option>
             <option>3200 ACB</option>
             <option>4000 ACB</option>
             <option>5000 ACB</option>
