edit intro text, more detail

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -315,7 +315,7 @@
 
     <div class='sidebar-group'>
       <div class="Option-Drawing">
-        <div><b>Drawing Options</b><!--<span data-hint="Either display rating, height or width of Breaker" class="hint"> <u><b>(Hint)</b></u></span>--></div>
+        <div><b>Text Options</b><!--<span data-hint="Either display rating, height or width of Breaker" class="hint"> <u><b>(Hint)</b></u></span>--></div>
         <div id="user-controls" class='sidebar-group-content'>
           <div id='options-drawing'>
             <select id="block-text">
@@ -332,7 +332,7 @@
       <div class='Calculation'>
         <div><b>Start Calculation</b></div>
         <div class='btn-wrapper sidebar-group-content'>
-          <input type="button" value=Estimate class='btn btn-primary' id='estimate-btn'>
+          <input type="button" value=Draw class='btn btn-primary' id='estimate-btn'>
           <input type="button" value=Reset class='btn btn-primary' id="reset-btn">
         </div>
       </div>
