4 incoming supply, change the 1000mccb --> ACB

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -133,8 +133,8 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-1000">1000 MCCB</label>
-          <select class="select-position" id="mmcb-1000">
+          <label for="mmcb-1000">1000 ACB</label>
+          <select class="select-position" id="ACB-1000">
             <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
@@ -299,6 +299,34 @@
         <div class='selection-wrapper'>
           <label for="Incoming 2">Supply 2 </label>
           <select class="incoming-position" id="Incoming 2">
+            <option value ='0'>None</option>
+            <option>1250 ACB</option>
+            <option>1600 ACB</option>
+            <option>2000 ACB</option>
+            <option>2500 ACB</option>
+            <option>3200 ACB</option>
+            <option>4000 ACB</option>
+            <option>5000 ACB</option>
+            <option>6300 ACB</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="Incoming 3">Supply 3 </label>
+          <select class="incoming-position" id="Incoming 3">
+            <option value ='0'>None</option>
+            <option>1250 ACB</option>
+            <option>1600 ACB</option>
+            <option>2000 ACB</option>
+            <option>2500 ACB</option>
+            <option>3200 ACB</option>
+            <option>4000 ACB</option>
+            <option>5000 ACB</option>
+            <option>6300 ACB</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="Incoming 4">Supply 4 </label>
+          <select class="incoming-position" id="Incoming 4">
             <option value ='0'>None</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
