Incoming random, some text change

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -37,7 +37,7 @@
       <div><b>Outgoing Breaker</b><!--<span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span>--></div>
       <div id='select-quantity' class='sidebar-group-content'>
         <div class='selection-wrapper'>
-          <label for="mmcb-100">100 MCCB</label>
+          <label for="mmcb-100">100 TPN MCCB</label>
           <select class="select-position" id="mmcb-100">
             <option value ='0'>0</option>
             <option>1</option>
@@ -53,7 +53,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-160">160 MCCB</label>
+          <label for="mmcb-160">160 TPN MCCB</label>
           <select class="select-position" id="mmcb-160">
             <option value ='0'>0</option>
             <option>1</option>
@@ -69,7 +69,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-250">250 MCCB</label>
+          <label for="mmcb-250">250 TPN MCCB</label>
           <select class="select-position" id="mmcb-250">
             <option value ='0'>0</option>
             <option>1</option>
@@ -85,7 +85,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-400">400 MCCB</label>
+          <label for="mmcb-400">400 TPN MCCB</label>
           <select class="select-position" id="mmcb-400">
             <option value ='0'>0</option>
             <option>1</option>
@@ -101,7 +101,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-630">630 MCCB</label>
+          <label for="mmcb-630">630 TPN MCCB</label>
           <select class="select-position" id="mmcb-630">
             <option value ='0'>0</option>
             <option>1</option>
@@ -117,7 +117,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-800">800 MCCB</label>
+          <label for="mmcb-800">800 TPN MCCB</label>
           <select class="select-position" id="mmcb-800">
             <option value ='0'>0</option>
             <option>1</option>
@@ -133,7 +133,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="mmcb-1000">1000 ACB</label>
+          <label for="mmcb-1000">1000 TPN ACB</label>
           <select class="select-position" id="ACB-1000">
             <option value ='0'>0</option>
             <option>1</option>
@@ -149,7 +149,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-1200">1250 ACB</label>
+          <label for="ACB-1200">1250 TPN ACB</label>
           <select class="select-position" id="ACB-1250">
             <option value ='0'>0</option>
             <option>1</option>
@@ -165,7 +165,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-1600">1600 ACB</label>
+          <label for="ACB-1600">1600 TPN ACB</label>
           <select class="select-position" id="ACB-1600">
             <option value ='0'>0</option>
             <option>1</option>
@@ -181,7 +181,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-2000">2000 ACB</label>
+          <label for="ACB-2000">2000 TPN ACB</label>
           <select class="select-position" id="ACB-2000">
             <option value ='0'>0</option>
             <option>1</option>
@@ -197,7 +197,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-2500">2500 ACB</label>
+          <label for="ACB-2500">2500 TPN ACB</label>
           <select class="select-position" id="ACB-2500">
             <option value ='0'>0</option>
             <option>1</option>
@@ -213,7 +213,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-3200">3200 ACB</label>
+          <label for="ACB-3200">3200 TPN ACB</label>
           <select class="select-position" id="ACB-3200">
             <option value ='0'>0</option>
             <option>1</option>
@@ -229,7 +229,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-4000">4000 ACB</label>
+          <label for="ACB-4000">4000 TPN ACB</label>
           <select class="select-position" id="ACB-4000">
             <option value ='0'>0</option>
             <option>1</option>
@@ -245,7 +245,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-5000">5000 ACB</label>
+          <label for="ACB-5000">5000 TPN ACB</label>
           <select class="select-position" id="ACB-5000">
             <option value ='0'>0</option>
             <option>1</option>
@@ -261,7 +261,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-6300">6300 ACB</label>
+          <label for="ACB-6300">6300 TPN ACB</label>
           <select class="select-position" id="ACB-6300">
             <option value ='0'>0</option>
             <option>1</option>
@@ -310,6 +310,7 @@
             <option>6300 ACB</option>
           </select>
         </div>
+        <!--
         <div class='selection-wrapper'>
           <label for="Incoming 3">Supply 3 </label>
           <select class="incoming-position" id="Incoming 3">
@@ -338,6 +339,7 @@
             <option>6300 ACB</option>
           </select>
         </div>
+        -->
       </div>
     </div>
 
