Changed embed to load only after btn click

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -40,7 +40,7 @@
           <div id="myModal" class="modal">
             <div class="modal-content">
               <div id="myExcelDiv" style="width: 632px; height: 550px"></div>
-              <script type="text/javascript" src="https://onedrive.live.com/embed?resid=8E98B898C211FF23%21813&authkey=%21APXH2PE-7R7_VkU&em=3&wdItem=%22'Sheet1'!A1%3AE26%22&wdDivId=%22myExcelDiv%22&wdAllowInteractivity=0"></script>
+              <!-- <script type="text/javascript" src="https://onedrive.live.com/embed?resid=8E98B898C211FF23%21813&authkey=%21APXH2PE-7R7_VkU&em=3&wdItem=%22'Sheet1'!A1%3AE26%22&wdDivId=%22myExcelDiv%22&wdAllowInteractivity=0"></script> -->
               <!--<script src='<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSyBlLZV5nrTcHJL2LKms7ZH_WPH4Zudviz2u8LrsyZqRUbSmNAhLpBblOALPzEjP1oPFEu_tINmbZk/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>'></script> -->       
               <span class="close">&times;</span>
 
