disable Music, and catalogue for now

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -50,6 +50,7 @@
             </div>
           </div>
         
+        <!--
         <li class="catalougeBtn" id = 'catalogue-Btn'><a href="#">Catalogue</a></li>
           <div id="catModal" class="modal">
             <div class="modal2-content">
@@ -57,7 +58,7 @@
               <embed src='Guthrie Catalogue.pdf' width="100%" height="650px" >
             </div>
           </div> 
-    
+        -->
       </div> 
     </div> 
   </nav>
@@ -417,7 +418,7 @@
       </div>
     </div>
 
-    <!--Too be remove -->
+    <!--Too be remove 
     <div class = 'sidebar-group'>
       <div class='Music'>
         <div><b>MUSIC!!</b></div>
@@ -427,7 +428,7 @@
           <input type="button" id=btn-stop value="Stop" onclick = "MusicSakura_stop()()">
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
 
   <div class='content-wrapper'>
