Minor change to text and more .no options

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -45,7 +45,7 @@
             
             <div class="modal-content">     
               <span class="close">&times;</span>
-              <div id="myExcelDiv" style="width: 632px; height: 550px"></div>
+              <div id="myExcelDiv" style="width: 632px; height: 650px"></div>
               
             </div>
           </div>
@@ -317,6 +317,8 @@
           <label for="Incoming 1">Supply 1 </label>
           <select class="incoming-position" id="Incoming 1">
             <option value ='0'>None</option>
+            <option>600 MCCB</option>
+            <option>1000 ACB</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
             <option>2000 ACB</option>
@@ -331,6 +333,8 @@
           <label for="Incoming 2">Supply 2 </label>
           <select class="incoming-position" id="Incoming 2">
             <option value ='0'>None</option>
+            <option>600 MCCB</option>
+            <option>1000 ACB</option>
             <option>1250 ACB</option>
             <option>1600 ACB</option>
             <option>2000 ACB</option>
