--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -304,6 +304,251 @@
         </div>
       </div>
     </div>
+    <div class='sidebar-group'>
+      <div><b>Outgoing Breaker 2</b><!--<span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span>--></div>
+      <div id='select-quantity' class='sidebar-group-content'>
+        <div class='selection-wrapper'>
+          <label for="mmcb-100">100 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-100">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-160">160 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-160">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-250">250 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-250">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-400">400 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-400">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-630">630 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-630">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-800">800 TPN MCCB</label>
+          <select class="select-position-2" id="mmcb-800">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="mmcb-1000">1000 TPN ACB</label>
+          <select class="select-position-2" id="ACB-1000">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-1200">1250 TPN ACB</label>
+          <select class="select-position-2" id="ACB-1250">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-1600">1600 TPN ACB</label>
+          <select class="select-position-2" id="ACB-1600">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-2000">2000 TPN ACB</label>
+          <select class="select-position-2" id="ACB-2000">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-2500">2500 TPN ACB</label>
+          <select class="select-position-2" id="ACB-2500">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-3200">3200 TPN ACB</label>
+          <select class="select-position-2" id="ACB-3200">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-4000">4000 TPN ACB</label>
+          <select class="select-position-2" id="ACB-4000">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-5000">5000 TPN ACB</label>
+          <select class="select-position-2" id="ACB-5000">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+        <div class='selection-wrapper'>
+          <label for="ACB-6300">6300 TPN ACB</label>
+          <select class="select-position-2" id="ACB-6300">
+            <option value ='0'>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+          </select>
+        </div>
+      </div>
+    </div>
 
     <div class='sidebar-group'>
     <div><b>Incoming Breaker</b><!--<span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span>--></div>
@@ -340,7 +585,7 @@
             <option>6300 ACB</option>
           </select>
         </div>
-        
+        <!--
         <div class='selection-wrapper'>
           <label for="Incoming 3">Supply 3 </label>
           <select class="incoming-position" id="Incoming 3">
@@ -373,7 +618,7 @@
             <option>6300 ACB</option>
           </select>
         </div>
-        
+        -->
       </div>
     </div>
   
