local copy of bootstrap & jquery

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -8,9 +8,14 @@
   <title>Document</title>
   <!-- CSS only -->
   <link href="css/simple-hint.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="Plugin/3.4.1.bootstrap.min.css">
+  <script src="Plugin/3.5.1.jquery.min.js"></script>
+  <script src="Plugin/4.5.2.bootstrap.min.js"></script>
+
+  <!--Latest Jquery-ui released on 2016, jqueryui.com -->
+  <link rel="stylesheet" href="Plugin/1.12.1.jquery.theme-ui.css">
+  <script src="Plugin/1.1.2.1.jquery-ui.js"></script>
+  
   <link rel="stylesheet" href="css/Sizing.css">
   <link rel="stylesheet" href="css/Sakura.css">
   <link rel="stylesheet" href="css/Intro.css">
